remove unused variables from airbnb price regression spark scala

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -117,8 +117,6 @@
     "// Step 1. Load our Airbnb dataset\n",
     "\n",
     "val inputFile = \"file:////tmp/airbnb.avro\"\n",
-    "val outputFileRf = \"/tmp/transformer.rf.ml\"\n",
-    "val outputFileLr = \"/tmp/transformer.lr.ml\"\n",
     "\n",
     "var dataset = spark.sqlContext.read.format(\"com.databricks.spark.avro\").\n",
     "  load(inputFile)\n",
@@ -600,7 +598,7 @@
     "val sbc = SparkBundleContext().withDataset(sparkPipelineLr.transform(datasetImputedFiltered))\n",
     "for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.lr.zip\"))) {\n",
     "        sparkPipelineLr.writeBundle.save(bf)(sbc).get\n",
-    "      }\n"
+    "      }"
    ]
   },
   {
@@ -614,7 +612,7 @@
     "val sbcRf = SparkBundleContext().withDataset(sparkPipelineRf.transform(datasetImputedFiltered))\n",
     "for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.rf.zip\"))) {\n",
     "        sparkPipelineRf.writeBundle.save(bf)(sbcRf).get\n",
-    "      }\n"
+    "      }"
    ]
   },
   {
@@ -785,7 +783,7 @@
    },
    "outputs": [],
    "source": [
-    "import ml.combust.mleap.spark.SparkSupport._\n"
+    "import ml.combust.mleap.spark.SparkSupport._"
    ]
   },
   {
@@ -918,7 +916,7 @@
    "source": [
     "val allCols = allFeatures.union(Seq(\"price\")).map(datasetImputed.col)\n",
     "val nullFilter = allCols.map(_.isNotNull).reduce(_ && _)\n",
-    "val datasetImputedFiltered = datasetImputed.select(allCols: _*).filter(nullFilter).persist()\n"
+    "val datasetImputedFiltered = datasetImputed.select(allCols: _*).filter(nullFilter).persist()"
    ]
   },
   {
@@ -1004,7 +1002,7 @@
    "outputs": [],
    "source": [
     "implicit val system = ActorSystem(\"combust-client\")\n",
-    "implicit val materializer = ActorMaterializer()\n"
+    "implicit val materializer = ActorMaterializer()"
    ]
   },
   {
@@ -1042,7 +1040,6 @@
     }
    ],
    "source": [
-    "\n",
     "// {\n",
     "//     implicit val context = sbc\n",
     "//     Await.result(sparkPipelineLr.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"my_model_lr\", token), 10.seconds)\n",
@@ -1060,7 +1057,7 @@
     "{\n",
     "    implicit val context = sbcRf\n",
     "    Await.result(sparkPipelineRf.deploy(\"http://localhost:65327\", \"my_username\", \"my_model_rf\"), 10.seconds)\n",
-    "}\n"
+    "}"
    ]
   },
   {
