revert unintended changes

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -598,7 +598,7 @@
     "val sbc = SparkBundleContext().withDataset(sparkPipelineLr.transform(datasetImputedFiltered))\n",
     "for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.lr.zip\"))) {\n",
     "        sparkPipelineLr.writeBundle.save(bf)(sbc).get\n",
-    "      }"
+    "      }\n"
    ]
   },
   {
@@ -612,7 +612,7 @@
     "val sbcRf = SparkBundleContext().withDataset(sparkPipelineRf.transform(datasetImputedFiltered))\n",
     "for(bf <- managed(BundleFile(\"jar:file:/tmp/airbnb.model.rf.zip\"))) {\n",
     "        sparkPipelineRf.writeBundle.save(bf)(sbcRf).get\n",
-    "      }"
+    "      }\n"
    ]
   },
   {
@@ -783,7 +783,7 @@
    },
    "outputs": [],
    "source": [
-    "import ml.combust.mleap.spark.SparkSupport._"
+    "import ml.combust.mleap.spark.SparkSupport._\n"
    ]
   },
   {
@@ -916,7 +916,7 @@
    "source": [
     "val allCols = allFeatures.union(Seq(\"price\")).map(datasetImputed.col)\n",
     "val nullFilter = allCols.map(_.isNotNull).reduce(_ && _)\n",
-    "val datasetImputedFiltered = datasetImputed.select(allCols: _*).filter(nullFilter).persist()"
+    "val datasetImputedFiltered = datasetImputed.select(allCols: _*).filter(nullFilter).persist()\n"
    ]
   },
   {
@@ -1002,7 +1002,7 @@
    "outputs": [],
    "source": [
     "implicit val system = ActorSystem(\"combust-client\")\n",
-    "implicit val materializer = ActorMaterializer()"
+    "implicit val materializer = ActorMaterializer()\n"
    ]
   },
   {
@@ -1057,7 +1057,7 @@
     "{\n",
     "    implicit val context = sbcRf\n",
     "    Await.result(sparkPipelineRf.deploy(\"http://localhost:65327\", \"my_username\", \"my_model_rf\"), 10.seconds)\n",
-    "}"
+    "}\n"
    ]
   },
   {
