updating scala notebooks

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "// Step 1. Load our Airbnb dataset\n",
+    "// Step 0. Load our Airbnb dataset\n",
     "\n",
     "val inputFile = \"file:////tmp/airbnb.avro\"\n",
     "\n",
@@ -533,7 +533,7 @@
     }
    ],
    "source": [
-    "// Step 3.1 Create our random forest model\n",
+    "// Create our random forest model\n",
     "val randomForest = new RandomForestRegressor(uid = \"random_forest_regression\").\n",
     "    setFeaturesCol(\"features_rf\").\n",
     "    setLabelCol(\"price\").\n",
@@ -568,7 +568,7 @@
     }
    ],
    "source": [
-    "// Step 3.2 Create our linear regression model\n",
+    "// Create our linear regression model\n",
     "val linearRegression = new LinearRegression(uid = \"linear_regression\").\n",
     "    setFeaturesCol(\"features_lr\").\n",
     "    setLabelCol(\"price\").\n",
@@ -772,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 13 (Optional): Score a Spark Data Frame"
+    "### Step 12 (Optional): Score a Spark Data Frame"
    ]
   },
   {
@@ -990,7 +990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 11: Set up the ActorSystem"
+    "### Step 13: Set up the ActorSystem"
    ]
   },
   {
@@ -1009,7 +1009,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 12: Define model servers to send your models to and .deploy()"
+    "### Step 14: Define model servers to send your models to and .deploy()"
    ]
   },
   {
