--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 0: Load libraries and data"
+    "### Step 1: Load libraries and data"
    ]
   },
   {
@@ -108,8 +108,6 @@
     "// Step 1. Load our Lending Club dataset\n",
     "\n",
     "val inputFile = \"file:////tmp/lending_club.avro\"\n",
-    "val outputFileRf = \"/tmp/transformer.rf.ml\"\n",
-    "val outputFileLr = \"/tmp/transformer.lr.ml\"\n",
     "\n",
     "var dataset = spark.sqlContext.read.format(\"com.databricks.spark.avro\").\n",
     "  load(inputFile)\n",
@@ -512,7 +510,7 @@
     }
    ],
    "source": [
-    "// Step 3.1 Create our random forest model\n",
+    "// Create our random forest model\n",
     "val randomForest = new RandomForestClassifier(uid = \"random_forest_classifier\").\n",
     "    setFeaturesCol(\"features_rf\").\n",
     "    setLabelCol(\"approved\").\n",
@@ -628,7 +626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 13 (Optional): Serialize your models to bundle.ml"
+    "### Step 11 (Optional): Serialize your models to bundle.ml"
    ]
   },
   {
