labelencoder still not working when scoring

--- a/notebooks/airbnb-price-regression-scikit.ipynb
+++ b/notebooks/airbnb-price-regression-scikit.ipynb
@@ -663,8 +663,8 @@
    "source": [
     "# TODO: Need to fix scikit's One-Hot-Encoder to drop the last column of a matrix if we're using it for ML\n",
     "def _create_le_one_hot_pipeline(feature_name):\n",
-    "    feature_extractor3_tf = FeatureExtractor([feature_name], '{}'.format(feature_name), \n",
-    "                                         ['{}'.format(feature_name)])\n",
+    "    feature_extractor3_tf = FeatureExtractor([feature_name], '{}_label'.format(feature_name), \n",
+    "                                         ['{}_label_encoded'.format(feature_name)])\n",
     "\n",
     "    # Label Encoder for x1 Label \n",
     "    label_encoder_tf = LabelEncoder(input_features = [feature_extractor3_tf.output_vector], output_features='{}_label_le'.format(feature_name))\n",
