--- a/notebooks/airbnb-price-regression-scikit.ipynb
+++ b/notebooks/airbnb-price-regression-scikit.ipynb
@@ -663,11 +663,10 @@
    "source": [
     "# TODO: Need to fix scikit's One-Hot-Encoder to drop the last column of a matrix if we're using it for ML\n",
     "def _create_le_one_hot_pipeline(feature_name):\n",
-    "    feature_extractor3_tf = FeatureExtractor([feature_name], '{}_label'.format(feature_name), \n",
-    "                                         ['{}_label_encoded'.format(feature_name)])\n",
+    "    feature_extractor3_tf = FeatureExtractor([feature_name], feature_name, [feature_name])\n",
     "\n",
     "    # Label Encoder for x1 Label \n",
-    "    label_encoder_tf = LabelEncoder(input_features = [feature_extractor3_tf.output_vector], output_features='{}_label_le'.format(feature_name))\n",
+    "    label_encoder_tf = LabelEncoder(input_features = feature_extractor3_tf.output_vector_items, output_features='{}_label_le'.format(feature_name))\n",
     "\n",
     "    # Reshape the output of the LabelEncoder to N-by-1 array\n",
     "    reshape_le_tf = ReshapeArrayToN1()\n",
