changes to the airbnb demo to cater for core types changes

--- a/notebooks/airbnb-price-regression-scikit.ipynb
+++ b/notebooks/airbnb-price-regression-scikit.ipynb
@@ -582,10 +582,10 @@
    "source": [
     "imputed_continuous_features = ['imp_{}'.format(x) for x in continuous_features]\n",
     "\n",
-    "feature_extractor2_tf = FeatureExtractor(continuous_features, 'imputed_features', imputed_continuous_features)\n",
+    "feature_extractor2_tf = FeatureExtractor(input_scalars=continuous_features, output_vector='imputed_features', output_vector_items=imputed_continuous_features)\n",
     "\n",
     "impute_security_deposit_tf = Imputer(strategy='mean', axis=0)\n",
-    "impute_security_deposit_tf.mlinit(input_features=feature_extractor2_tf.output_vector, output_features='imputed_features')\n",
+    "impute_security_deposit_tf.mlinit(prior_tf=feature_extractor2_tf, output_features='imputed_features')\n",
     "\n",
     "impute_pipeline = Pipeline([\n",
     "        (feature_extractor2_tf.name, feature_extractor2_tf),\n",
@@ -636,10 +636,10 @@
    },
    "outputs": [],
    "source": [
-    "feature_extractor_tf = FeatureExtractor(imputed_continuous_features, 'unscaled_cont_features', [\"scaled_{}\".format(x) for x in imputed_continuous_features])\n",
+    "feature_extractor_tf = FeatureExtractor(input_scalars=imputed_continuous_features, output_vector='unscaled_cont_features', output_vector_items=[\"scaled_{}\".format(x) for x in imputed_continuous_features])\n",
     "\n",
     "standard_scaler_tf = StandardScaler()\n",
-    "standard_scaler_tf.mlinit(input_features=feature_extractor_tf.output_vector, output_features='scaled_cont_features')\n",
+    "standard_scaler_tf.mlinit(prior_tf=feature_extractor_tf, output_features='scaled_cont_features')\n",
     "\n",
     "standard_scaler_pipeline = Pipeline([(feature_extractor_tf.name, feature_extractor_tf),\n",
     "                            (standard_scaler_tf.name, standard_scaler_tf)])\n",
@@ -663,7 +663,7 @@
    "source": [
     "# TODO: Need to fix scikit's One-Hot-Encoder to drop the last column of a matrix if we're using it for ML\n",
     "def _create_le_one_hot_pipeline(feature_name):\n",
-    "    feature_extractor3_tf = FeatureExtractor([feature_name], '{}_label'.format(feature_name), [feature_name])\n",
+    "        feature_extractor3_tf = FeatureExtractor(input_scalars=[feature_name], output_vector='{}_label'.format(feature_name), output_vector_items=[feature_name])\n",
     "\n",
     "    # Label Encoder for x1 Label \n",
     "    label_encoder_tf = LabelEncoder(input_features = feature_extractor3_tf.output_vector_items, output_features='{}_label_le'.format(feature_name))\n",
@@ -673,7 +673,7 @@
     "\n",
     "    # Vector Assembler for x1 One Hot Encoder\n",
     "    one_hot_encoder_tf = OneHotEncoder(sparse=False)\n",
-    "    one_hot_encoder_tf.mlinit(input_features = label_encoder_tf.output_features, output_features = '{}_label_one_hot_encoded'.format(feature_name))\n",
+    "    one_hot_encoder_tf.mlinit(prior_tf=label_encoder_tf, output_features = '{}_label_one_hot_encoded'.format(feature_name))\n",
     "\n",
     "    one_hot_encoder_pipeline_x0 = Pipeline([\n",
     "                                             (feature_extractor3_tf.name, feature_extractor3_tf),\n",
@@ -695,7 +695,8 @@
    },
    "outputs": [],
    "source": [
-    "oh_pipelines = [_create_le_one_hot_pipeline(x) for x in categorical_features]"
+    "oh_pipelines = [_create_le_one_hot_pipeline(x) for x in categorical_features]",
+    "oh_fes = [x.steps[-1][1] for x in oh_pipelines]"
    ]
   },
   {
@@ -764,7 +765,7 @@
    "outputs": [],
    "source": [
     "# Vector Assembler, for serialization purposes only\n",
-    "feature_extractor_lr_model_tf = FeatureExtractor([standard_scaler_tf.output_features] + oh_features, 'input_features', [standard_scaler_tf.output_features] + oh_features)\n",
+    "feature_extractor_lr_model_tf = FeatureExtractor(input_vectors=[feature_extractor_tf] + oh_fes, output_vector='input_features', output_vector_items=[standard_scaler_tf.output_features] + oh_features)\n",
     "feature_extractor_lr_model_tf.skip_fit_transform = True\n",
     "\n",
     "# Define our linear regression\n",
@@ -808,7 +809,7 @@
    "outputs": [],
    "source": [
     "# Vector Assembler, for serialization purposes only\n",
-    "feature_extractor_rf_model_tf = FeatureExtractor(imputed_continuous_features, 'input_features', imputed_continuous_features)\n",
+    "feature_extractor_rf_model_tf = FeatureExtractor(input_scalars=imputed_continuous_features, output_vector='input_features', output_vector_items=imputed_continuous_features)\n",
     "feature_extractor_rf_model_tf.skip_fit_transform = True\n",
     "\n",
     "\n",
