--- a/notebooks/airbnb-price-regression-scikit.ipynb
+++ b/notebooks/airbnb-price-regression-scikit.ipynb
@@ -663,7 +663,7 @@
    "source": [
     "# TODO: Need to fix scikit's One-Hot-Encoder to drop the last column of a matrix if we're using it for ML\n",
     "def _create_le_one_hot_pipeline(feature_name):\n",
-    "        feature_extractor3_tf = FeatureExtractor(input_scalars=[feature_name], output_vector='{}_label'.format(feature_name), output_vector_items=[feature_name])\n",
+    "    feature_extractor3_tf = FeatureExtractor(input_scalars=[feature_name], output_vector='{}_label'.format(feature_name), output_vector_items=[feature_name])\n",
     "\n",
     "    # Label Encoder for x1 Label \n",
     "    label_encoder_tf = LabelEncoder(input_features = feature_extractor3_tf.output_vector_items, output_features='{}_label_le'.format(feature_name))\n",
@@ -695,7 +695,7 @@
    },
    "outputs": [],
    "source": [
-    "oh_pipelines = [_create_le_one_hot_pipeline(x) for x in categorical_features]",
+    "oh_pipelines = [_create_le_one_hot_pipeline(x) for x in categorical_features]\n",
     "oh_fes = [x.steps[-1][1] for x in oh_pipelines]"
    ]
   },
