--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -62,9 +62,6 @@
     "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.4.0 --transitive\n",
     "// %AddDeps com.databricks spark-avro_2.11 3.0.1\n",
     "\n",
-    "// Register the Tensor UDT with Spark\n",
-    "org.apache.spark.sql.mleap.TensorUDT\n",
-    "\n",
     "// Import the rest of the required packages\n",
     "import org.apache.spark.ml.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
@@ -81,13 +78,7 @@
     "import ml.combust.mleap.runtime.MleapContext.defaultContext\n",
     "import ml.combust.mleap.runtime.MleapSupport._\n",
     "import java.io.File\n",
-    "\n",
-    "// Libraries to deploy models to combust cloud (optional)\n",
-    "import ml.combust.model.client.spark.SparkSupport._\n",
-    "import akka.actor.ActorSystem\n",
-    "import akka.stream.ActorMaterializer\n",
-    "import scala.concurrent.duration._\n",
-    "import scala.concurrent.Await"
+    "\n"
    ]
   },
   {
@@ -990,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 13: Set up the ActorSystem"
+    "### Step 13: Set up the ActorSystem (Optional)"
    ]
   },
   {
@@ -1001,6 +992,11 @@
    },
    "outputs": [],
    "source": [
+    "// Libraries to deploy models to combust cloud (optional)\n",
+    "import akka.actor.ActorSystem\n",
+    "import akka.stream.ActorMaterializer\n",
+    "import scala.concurrent.duration._\n",
+    "import scala.concurrent.Await\n",
     "implicit val system = ActorSystem(\"combust-client\")\n",
     "implicit val materializer = ActorMaterializer()\n"
    ]
@@ -1009,7 +1005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 14: Define model servers to send your models to and .deploy()"
+    "### Step 14: Define model servers to send your models to and .deploy() (Optional)"
    ]
   },
   {
@@ -1065,7 +1061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combust Cloud Client API"
+    "### Combust Cloud Client API (Optional)"
    ]
   },
   {
