remove commented out code

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -981,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 13: Set up the ActorSystem (Optional)"
+    "### Step 13 (Optional): Set up the ActorSystem"
    ]
   },
   {
@@ -1005,7 +1005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 14: Define model servers to send your models to and .deploy() (Optional)"
+    "### Step 14 (Optional): Define model servers to send your models to and .deploy()"
    ]
   },
   {
@@ -1036,16 +1036,6 @@
     }
    ],
    "source": [
-    "\n",
-    "// {\n",
-    "//     implicit val context = sbc\n",
-    "//     Await.result(sparkPipelineLr.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"my_model_lr\", token), 10.seconds)\n",
-    "// }\n",
-    "// {\n",
-    "//     implicit val context = sbcRf\n",
-    "//     Await.result(sparkPipelineRf.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"my_model_rf\", token), 10.seconds)\n",
-    "// }\n",
-    "\n",
     "\n",
     "{\n",
     "    implicit val context = sbc\n",
