use the right one hot encoder

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -63,7 +63,7 @@
     "// %AddDeps com.databricks spark-avro_2.11 3.0.1\n",
     "\n",
     "// Import the rest of the required packages\n",
-    "import org.apache.spark.ml.feature.OneHotEncoder\n",
+    "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
     "import org.apache.spark.ml.regression.{RandomForestRegressor, LinearRegression}\n",
     "import org.apache.spark.ml.{Pipeline, PipelineStage}\n",
