--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0-SNAPSHOT --transitive --repository file:///Users/mikhail/.m2/repository\n",
+    "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.9.0\n",
     "// %AddDeps com.databricks spark-avro_2.11 3.0.1\n",
     "\n",
     "// Spark Training Pipeline Libraries\n",
@@ -73,13 +73,7 @@
     "import resource._\n",
     "import ml.combust.bundle.BundleFile\n",
     "import org.apache.spark.ml.bundle.SparkBundleContext\n",
-    "\n",
-    "// Combust libraries to deploy model to combust cloud (optional)\n",
-    "import ml.combust.model.client.spark.SparkSupport._\n",
-    "import akka.actor.ActorSystem\n",
-    "import akka.stream.ActorMaterializer\n",
-    "import scala.concurrent.duration._\n",
-    "import scala.concurrent.Await"
+    "\n"
    ]
   },
   {
@@ -571,6 +565,12 @@
    },
    "outputs": [],
    "source": [
+    "// Combust libraries to deploy model to combust cloud (optional)\n",
+    "import akka.actor.ActorSystem\n",
+    "import akka.stream.ActorMaterializer\n",
+    "import scala.concurrent.duration._\n",
+    "import scala.concurrent.Await\n",
+
     "implicit val system = ActorSystem(\"combust-client\")\n",
     "implicit val materializer = ActorMaterializer()"
    ]
@@ -601,15 +601,6 @@
     }
    ],
    "source": [
-    "\n",
-    "// {\n",
-    "//     implicit val context = sbc\n",
-    "//     Await.result(sparkPipelineLr.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"lc_model_lr\", token), 10.seconds)\n",
-    "// }\n",
-    "// {\n",
-    "//     implicit val context = sbcRf\n",
-    "//     Await.result(sparkPipelineRf.deploy(\"http://models.combust.ml:65327\", \"my_username\", \"lc_model_rf\", token), 10.seconds)\n",
-    "// }\n",
     "\n",
     "\n",
     "{\n",
