lending club optional steps

--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -554,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 9: Set up the ActorSystem"
+    "### Step 9 (Optional): Set up the ActorSystem"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 10: Deploy your LR and RF pipelines to the model servers"
+    "### Step 10 (Optional): Deploy your LR and RF pipelines to the model servers"
    ]
   },
   {
