updated pyspark airbnb demo

--- a/notebooks/PySpark - AirBnb.ipynb
+++ b/notebooks/PySpark - AirBnb.ipynb
@@ -52,7 +52,6 @@
    },
    "outputs": [],
    "source": [
-    "from mleap import pyspark\n",
     "\n",
     "from pyspark.ml.linalg import Vectors\n",
     "from mleap.pyspark.spark_support import SimpleSparkSerializer\n",
@@ -70,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.format(\"com.databricks.spark.avro\").load(\"/tmp/airbnb.avro\")"
+    "df = spark.read.format(\"com.databricks.spark.avro\").load(\"file:\/\/\/\/tmp/airbnb.avro\")"
    ]
   },
   {
@@ -548,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 10: Deploy to ModelServer"
+    "### Step 10 (Optional): Deploy to ModelServer"
    ]
   },
   {
