--- a/notebooks/PySpark - AirBnb.ipynb
+++ b/notebooks/PySpark - AirBnb.ipynb
@@ -52,6 +52,7 @@
    },
    "outputs": [],
    "source": [
+    "from mleap import pyspark\n",
     "\n",
     "from pyspark.ml.linalg import Vectors\n",
     "from mleap.pyspark.spark_support import SimpleSparkSerializer\n",
